feat: add unit testing for controllers and services